--- a/css/softframe.css
+++ b/css/softframe.css
@@ -1,39 +1,140 @@
 :root {
-    --sf1: calc((290% / 12) * 1);
-    --sf2: calc((290% / 12) * 2);
-    --sf3: calc((290% / 12) * 3);
-    --sf4: calc((290% / 12) * 4);
-    --sf5: calc((290% / 12) * 5);
-    --sf6: calc((290% / 12) * 6);
-    --sf7: calc((290% / 12) * 7);
-    --sf8: calc((290% / 12) * 8);
-    --sf9: calc((290% / 12) * 9);
-    --sf10: calc((290% / 12) * 10);
-    --sf11: calc((290% / 12) * 11);
-    --sf12: calc((290% / 12) * 12);
+    /* = ((100 / 12) * { block quantity }) - 1 */
+    /* GRID CALCS*/
+    --sf1: 7.33333%;
+    --sf2: 15.66667%;
+    --sf3: 24%;
+    --sf4: 32.33333%;
+    --sf5: 40.66667;
+    --sf6: 49%;
+    --sf7: 57.33333;
+    --sf8: 65.66667;
+    --sf9: 74%;
+    --sf10: 82.33333;
+    --sf11: 90.66667;
+    --sf12: 99%;
+
+    /* DEFAULT COLORS */
+    --white: #ffffff;
+    --light-gray: #d0d0d0;
+    --dark-gray: #363636;
+    --black: #000000;
 }
 
 body {
     font-family: 'Kulim Park', sans-serif;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: border-box;                                                                                                                                                                                     
 }
+
+h1 { font-size: 1.8rem; font-weight: 700; color: var(--dark-gray);}
+h2 { font-size: 1.6rem; font-weight: 700; color: var(--dark-gray);}
+h3 { font-size: 1.4rem; font-weight: 700; color: var(--dark-gray);}
+h4 { font-size: 1.2rem; font-weight: 700; color: var(--dark-gray);}
+h5 { font-size: 1.1rem; font-weight: 700; color: var(--dark-gray);}
+h6 { font-size: 1rem; font-weight: 700; color: var(--dark-gray);}
+
+p { font-size: 0.8rem; color: var(--dark-gray);}
+
+.text-center { text-align: center; }
 
 .softframe {
     width: 100%;
+    display: inline-block;
     margin: auto;
 }
 
-.sf {
-    margin: 5px;
-    display: -webkit-inline-box;
-    position: relative;
-}
+.sf { margin: 5px; position: relative; /* insert before .softframe */}
+.pf { padding: 5px; } /* padding */
 
 .sf1 { 
     width: var(--sf1);
     margin: 0.25%;
     position: relative;
     display: inline-block;
+}
+
+.sf2 { 
+    width: var(--sf2);
+    margin: 0.25%;
+    position: relative;
+    display: inline-block;
+}
+
+.sf3 { 
+    width: var(--sf3);
+    margin: 0.25%;
+    position: relative;
+    display: inline-block;
+}
+
+.sf4 { 
+    width: var(--sf4);
+    margin: 0.25%;
+    position: relative;
+    display: inline-block;
+}
+
+.sf5 { 
+    width: var(--sf5);
+    margin: 0.25%;
+    position: relative;
+    display: inline-block;
+}
+
+.sf6 { 
+    width: var(--sf6);
+    margin: 0.25%;
+    position: relative;
+    display: inline-block;
+}
+
+.sf7 { 
+    width: var(--sf7);
+    margin: 0.25%;
+    position: relative;
+    display: inline-block;
+}
+
+.sf8 { 
+    width: var(--sf8);
+    margin: 0.25%;
+    position: relative;
+    display: inline-block;
+}
+
+.sf9 { 
+    width: var(--sf9);
+    margin: 0.25%;
+    position: relative;
+    display: inline-block;
+}
+
+.sf10 { 
+    width: var(--sf10);
+    margin: 0.25%;
+    position: relative;
+    display: inline-block;
+}
+
+.sf11 { 
+    width: var(--s11);
+    margin: 0.25%;
+    position: relative;
+    display: inline-block;
+}
+
+.sf12 { 
+    width: var(--sf12);
+    margin: 0.25%;
+    position: relative;
+    display: inline-block;
+}
+
+.sf_card {
+    position: relative;
+    color: var(--dark-gray);
+    background-color: var(--light-gray);
+    box-shadow: 0px 0px 4px 0px var(--light-gray);
 }
